First implementation of routing

--- a/OneCircleWeb/Scripts/views/placeDetails.html
+++ b/OneCircleWeb/Scripts/views/placeDetails.html
@@ -13,4 +13,5 @@
         <span data-bind="text: JSON.stringify($data)"></span>
     </div>
     <button data-bind="click: $component.back">Back to list</button>
+    <a href="#/places">Back to list</a>
 </div>
