End of routing bonus exercise

--- a/OneCircleWeb/Scripts/views/placeDetails.html
+++ b/OneCircleWeb/Scripts/views/placeDetails.html
@@ -1,4 +1,4 @@
-﻿<div data-bind="with: current">
+﻿<div data-bind="with: place">
     <h3>Details for <span data-bind="text: title"></span></h3>
     <div>
         Latitude
